Descomplicando_Kubernetes/day-14/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx
  namespace: giropops
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    resources:
      limits:
        cpu: 1
        memory: 64Mi
      requests:
        cpu: 1
        memory: 32Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
