Descomplicando_Kubernetes/day-14/only-registry-allowed.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: ensure-images-from-trusted-repo
spec:
  validationFailureAction: Enforce
  rules:
  - name: trusted-repo-check
    match:
      resources:
        kinds:
        - Pod
    validate:
      message: "Somente imagens do Luis nesse Cluster!"
      pattern:
        spec:
          containers:
          - name: "*"
            image: "luisbianconi/*"
